2008-05-26  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/qtdemux/qtdemux.c: (gst_qtdemux_find_segment),
	(gst_qtdemux_activate_segment):
	Unbreak segment activation again. Fixes #531672.

2008-05-25  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/flac/Makefile.am:
	* ext/flac/gstflacdec.c: (gst_flac_dec_write):
	Set the channel layout when decoding FLAC files with more than 2
	channels as defined by the FLAC spec. Fixes bug #534570.

	Also don't try to decode left/side, right/side and mid/side files
	as we don't support this at all.

2008-05-24  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* configure.ac:
	  We need -base CVS (rtsp).

2008-05-22  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* gst/udp/Makefile.am:
	  Add -D_GNU_SOURCE to CFLAGS so we get things like EAI_ADDRFAMILY
	  when including netdb.h when building against glibc >= 2.8.

2008-05-22  Julien Moutte  <julien@fluendo.com>

	* gst/smpte/gstsmptealpha.c: (gst_smpte_alpha_setcaps): Fix
	debug statement arguments.
	* gst/udp/gstmultiudpsink.c: (gst_multiudpsink_setup_qos_dscp):
	* gst/udp/gstudpnetutils.c: (gst_udp_join_group),
	(gst_udp_leave_group): Fix IP and IPV6 options to make it work
	on more platforms.

2008-05-21  Wim Taymans  <wim.taymans@collabora.co.uk>

	* tests/check/elements/avimux.c: (setup_src_pad),
	(teardown_src_pad):
	* tests/check/elements/icydemux.c: (icydemux_found_pad),
	(GST_START_TEST):
	* tests/check/elements/matroskamux.c: (setup_src_pad),
	(teardown_src_pad), (setup_sink_pad), (teardown_sink_pad):
	* tests/check/elements/videocrop.c: (video_crop_get_test_caps),
	(GST_START_TEST):
	* tests/check/elements/wavpackparse.c: (wavpackparse_found_pad),
	(setup_wavpackparse), (cleanup_wavpackparse):
	Don't use gst_element_get_pad(), it's a bad, bad method.

2008-05-21  Wim Taymans  <wim.taymans@collabora.co.uk>

	* ext/gconf/gstgconfaudiosrc.c: (gst_gconf_audio_src_reset),
	(do_toggle_element):